--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,19 @@
 {
-  "extends": ["prettier", "plugin:node/recommended"],
-  "plugins": ["prettier"],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
+  },
+  "extends": [
+    "prettier",
+    "plugin:node/recommended",
+    "plugin:react/recommended"
+  ],
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "no-unused-vars": "warn",
@@ -8,5 +21,17 @@
     "func-names": "off",
     "no-process-exit": "off",
     "object-shorthand": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "node/no-missing-import": ["error", {
+      "allowModules": [],
+      "resolvePaths": ["./src"],
+      "tryExtensions": [".js", ".jsx", ".ts", ".tsx", ".json"]
+    }]
   },
+  "overrides": [{
+    "files": ["webpack.config.js", "test/**/*.js"],
+    "rules": {
+      "node/no-unpublished-require": "off"
+    }
+  }]
+}
