--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "webpack --watch",
     "serve": "webpack serve"
   },
+  "type": "module",
   "keywords": [],
   "author": "Dmitry Filin",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.3",
     "prettier": "^3.0.0",
     "style-loader": "^3.3.3",
