--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My webpack project",
   "scripts": {
     "start": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -17,9 +17,12 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.9",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "@webpack-cli/generators": "^3.0.7",
     "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
@@ -29,16 +32,20 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.1",
     "prettier": "^3.0.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1"
   }
 }
