--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "watch": "webpack --watch",
     "serve": "webpack serve"
   },
+  "engines": {
+    "node": ">=8.3.0"
+  },
   "type": "module",
   "keywords": [],
   "author": "Dmitry Filin",
