--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/object-hash": "^3.0.2",
+    "bootstrap": "^5.3.0",
+    "object-hash": "^3.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1"
   }
