--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true,
+    "allowJs": false,
     "jsx": "react",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
   "files": [
     "src/index.tsx"
