--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.6.1",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
+    "@types/object-hash": "^3.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@webpack-cli/generators": "^3.0.7",
+    "babel-jest": "^29.6.1",
     "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
     "eslint-config-node": "^4.1.0",
@@ -36,8 +43,10 @@
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "prettier": "^3.0.0",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -47,7 +56,6 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/object-hash": "^3.0.2",
     "bootstrap": "^5.3.0",
     "object-hash": "^3.0.0",
     "react": "^18.2.0",
