--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true
   },
+  "types": ["node", "jest", "@testing-library/jest-dom"],
   "files": [
     "src/index.tsx"
   ]
