--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "glob": "^10.3.3",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.0",
+    "purgecss-webpack-plugin": "^5.0.0",
     "style-loader": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
